# ink

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix
evaluation/: CMakeLists.txt  cvc5.sh  eval.py  evaluation.sh  ink.sh  ink_no_decompose.sh  (+4 more)
transpile/: pyproject.toml
transpile/src/transpile/: __init__.py  __main__.py  scala_ast.py  spark_aggregator.py
transpile/src/transpile/ink/: __init__.py  ast.py  type.py
transpile/tests/: test_scala_ast.py  test_transpile.py
transpile/tests/migrated/: AVGVSaggregateGL.scala  AreaClickUDAF.scala  AverageAggregate.scala  AvgTemperatureAggregateFunction.scala  BloomFilterAggregationFunction.scala  CarCloudCountGL.scala  CityRatioUDAF.scala  ClickstreamAggregate.scala  CombineMaps.scala  CountAggregateFunction.scala  EnsembleByKey.scala  Ex_7_UDAF.scala  GroupConcatDistinctUDAF.scala  HarmonicMeanUDAF.scala  HourlyAvg.scala  HyperLogLogAggregationFunction.scala  KeepRowWithMaxAge.scala  LinearRoadAccidentAggregate.scala  LocalStatsAggregate.scala  Median.scala  OutliersOnOutliersDetectAggregateFunction.scala  PointAttributionScalaUdaf.scala  QW.scala  RasterFunction.scala  SmaAggregation.scala  StatsAggregateFunction.scala  StatsMotionLinearRegression.scala  TelemetryProcessor.scala  TermFrequencyAccumulator.scala  TopUdaf.scala  UnionSketchUDAF.scala  UserSessionAggregates.scala  VectorSumUDAF.scala  VehicleStatisticsAggregator.scala  WeightedCentroid.scala  counter.scala  finance.OHLCAggregator.scala  finance.OrderInputPriceAggregateFunction.scala  finance.PaymentsAggregateFunction.scala  finance.Prediction.scala  (+10 more)
transpile/tests/migrated-ink/: AVGVSaggregateGL.ink  AVGVSaggregateGL.json  AreaClickUDAF.ink  AverageAggregate.ink  AvgTemperatureAggregateFunction.ink  AvgTemperatureAggregateFunction.json  BloomFilterAggregationFunction.ink  CarCloudCountGL.ink  CityRatioUDAF.ink  ClickstreamAggregate.ink  ClickstreamAggregate.json  CountAggregateFunction.ink  CountAggregateFunction.json  Ex_7_UDAF.ink  HarmonicMeanUDAF.ink  HarmonicMeanUDAF.json  HourlyAvg.ink  KeepRowWithMaxAge.ink  KeepRowWithMaxAge.json  LinearRoadAccidentAggregate.ink  LinearRoadAccidentAggregate.json  Median.ink  Median.json  OutliersOnOutliersDetectAggregateFunction.ink  OutliersOnOutliersDetectAggregateFunction.json  PointAttributionScalaUdaf.ink  PointAttributionScalaUdaf.json  QW.ink  QW.json  SmaAggregation.ink  SmaAggregation.json  StatsAggregateFunction.ink  StatsMotionLinearRegression.ink  TelemetryProcessor.ink  TelemetryProcessor.json  UserSessionAggregates.ink  UserSessionAggregates.json  VehicleStatisticsAggregator.ink  WeightedCentroid.ink  counter.ink  (+12 more)
(+393 files in other folders)
