[package]
name = "rink"
version = "0.3.0"
edition = "2021"

[dependencies]
bitflags = "2.9.0"
chumsky = "1.0.0-alpha.8"
clap = { version = "4.5.31", features = ["derive"] }
egg = "0.10.0"
nameof = "1.2.2"
proptest = "1.6.0"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
sexp = "1.1.4"
tempfile = "3.18.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wait-timeout = "0.2.1"

[dev-dependencies]
quickcheck = "1.0.3"
rstest = "0.25.0"
test-log = { version = "0.2.17", features = ["trace"] }

[[bin]]
name = "rink-eval"
path = "src/eval/main.rs"
